Optimize fo Chrome and Fix the Overflow issue of the winner section.

--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ body {
 .section1, .section2, .section3, .section4 {
 	width: 100%;
 	height: 45rem;
+	border:10px blue;
+	margin: 0;
 }
 
 .innerSection {
@@ -25,36 +27,49 @@ body {
 	margin: auto;
 	border: solid;
 	display: block;
-	background: linear-gradient(0deg, rgba(7, 96, 26, 1) 0%, rgba(134, 219, 152, 1) 50%, rgba(255, 255, 255, 1) 100%);
+	background: linear-gradient(0deg, rgba(0, 104, 55, 1) 0%, rgba(0, 104, 55, .48) 19%, rgba(0, 104, 55, .44) 64%, rgba(199, 178, 153, 0.18) 100%);
 }
 
 /*section1*/
 .header {
-	height: 3rem;
-	border: solid;
+	height: 5%;
+	border: solid red;
 	display: grid;
-	grid-template-columns:15% 82%;
-	grid-gap: 3%;
-	margin-bottom: 15%;
+	grid-template-columns:15% 85%;
+	grid-row: 10%;
+	grid-gap: 2%;
+	margin-bottom: 20%;
+}
+
+.logoContainer {
+  border: solid yellow;
+  margin-top: 1%;
+  margin: 5%;
+  position: relative;
 }
 
 .logo {
-	text-align: center;
+	border: solid blue;
+	aspect-ratio: 1/1;
+	width:75%;
+	position:absolute;
+	right:0;
 	background-color: white;
-	border: solid;
 }
 
 .menu {
+  height: 1rem;
 	display: flex;
-	font-size:0.7em;
-	margin-top: 0.25rem;
-	justify-content: center;
+	font-size: 0.5rem;
+	margin-top: 1%;
+	justify-content: flex-end;
 	align-items: flex-start;
-	border: solid;
+	border: solid green;
+	margin-right: 5%;
 }
 
 .menu p {
-	margin: 0 1% 0 1%
+	margin: 0 1% 0 1%;
 }
 
 .menu a {
@@ -70,30 +85,36 @@ body {
 
 .tagLine {
 	text-align: center;
-	margin-bottom:5rem;
+	margin-bottom: 20%;
+	font-size: 1rem;
 }
 /*carousel*/
 .carouselBackground {
 	width:100%;
-	height: 20%;
+	height: 9rem;
 	padding: auto;
 	position: relative;
+	margin-bottom: 25%;
+	border: solid;
+	margin-bottom: 50%;
 }
 
 .background {
-	width: 100%;
-	aspect-ratio: 2/1;
-	z-index: 0;
-	position: absolute;
-}
+  width: 100%;
+  aspect-ratio: 1/0.5;
+  z-index: 0;
+  position: absolute;
+  border: solid;
+  padding: 0;
+} 
 
 .carousel {
-	margin: auto;
-	height: 100%;
-	width: 90%;
+  margin: auto;
+	width: 23rem;
+	aspect-ratio: 23/9;
 	position: relative;
-	background-image: url("20230715_175446.png");
 	z-index: 1;
+	border: solid;
 }
 
 .box1 {
@@ -182,6 +203,7 @@ body {
 
 .introduction {
 	border: solid;
+	margin-top: 10%;
 }
 
 /*section2*/
@@ -191,7 +213,6 @@ body {
 }
 
 .graphicDesign {
-	height: 35rem;
 	width: 80%;
 	border: solid;
 	display: flex;
@@ -201,6 +222,7 @@ body {
 	font-weight: 700;
 	font-size: 2em;
 	background-color: white;
+	aspect-ratio: 1/2.5;
 }
 
 /*section3*/
@@ -212,14 +234,14 @@ body {
 	grid-template-columns:24% 24%;
 	grid-template-rows: 2rem;
   grid-column-gap: 52.5%;
-	
+	font-size: 100%;
 }
 
 .winningDescription {
 	text-align: center;
 	/*border: solid;*/
 	margin: 0;
-	font-size: 100%;
+	
 }
 
 .win {
@@ -231,9 +253,9 @@ body {
 	grid-template-rows: 20rem;
   grid-column-gap: 52.5%;
   grid-row-gap: 0;
-	border: solid;
 	overflow-y: scroll;
 	overflow-x: none;
+	overflow: hidden;
 }
 
 .winningNumbers {
@@ -262,13 +284,16 @@ body {
 
 /*section4*/
 .conclusion {
-	border: red;
+	border: solid;
+	width: 100%;
+	height: 10%;
+	margin-bottom: 30%;
+	margin-top: 30%;
 }
 
 .websiteDescription {
 	padding: 0;
 	text-align: center;
-	margin-top: 40%;
 	margin-bottom: 2%;
 	font-size: 1rem;
 }
@@ -286,7 +311,6 @@ body {
 .aligner {
 	display: flex;
 	justify-content: center;
-	margin-bottom: 30%;
 	margin-top: 1%;
 }
 
@@ -310,17 +334,17 @@ body {
 	align-items: center;
 	justify-content: center;
 	background-color: white;
-	font-size: 2em;
+	font-size: 2rem;
 }
 
 .footer {
-	margin-top: 40%;
-	padding-bottom: 5%;
+  border: solid;
+	margin-top: 80%;
+	margin-bottom: 5%;
 	display: flex;
 	font-size: 12px;
 	align-items: center;
 	justify-content: center;
-	border: solid;
 }
 
 .footer p {
